--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Kaamaroopin</title>
   <meta charset="utf-8">
@@ -7,12 +8,42 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-<body>
 
-<div class="container mt-3">
-  <h1>Kaamaroopin</h1>
-    <h2>dharam</h2>
-</div>
+<body style="height:1500px">
+
+
+
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Kaamaroopin</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Team</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+
+
+  <div class="container-fluid" style="margin-top:77px">
+    <h1>Kaamaroopin</h1>
+    <img src="" alt="img" srcset="org-logo.jpg" style="max-height: 200px; max-width: 200px;">
+    <h3>investment group</h3>
+    <a href="https://kaamaroopin7.github.io/" target="_blank" rel="noopener noreferrer">check on server</a>
+  </div>
 
 </body>
+
 </html>
